--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="stylesheet" href="../../../bootstrap/css/bootstrap.css"> -->
     <title>How many thieves?</title>
   </head>
   <body>
@@ -10,6 +11,6 @@
     <div id="root">
       <!-- Application renders here -->
     </div>
-    </div>
+    <!-- <script src="../../../bootstrap/js/bootstrap.js"></script> -->
   </body>
 </html>
