--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,46 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>React Game</title>
+  <title>Rotten friends</title>
+  <style>
+    .container .col {
+      flex: 0 0 13%;
+      margin:  0 0 0 1%;
+      position: relative;
+      transition: 1s;
+    }
+    .animated {
+      opacity: 0;
+      animation-name: animation;
+      animation-duration: 3s;
+    }
+    .selectable:hover {
+      background-color: #0dcaf0;
+    }
+    .selected {
+      background-color: #0dcaf0;
+    }
+    .btn {
+      font-size: 22px;
+      margin-top: 50px;
+    }
+    .display-none {
+      display: none;
+    }
+    @keyframes animation {
+      0% {
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+  </style>
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
